--- a/src/css/style.css
+++ b/src/css/style.css
@@ -59,9 +59,10 @@ input[type="text"]::placeholder {
 button {
     box-sizing: content-box;
     display: block;
-    margin: 60px auto;
+    margin: 35px auto;
     font-size: 3.1rem;
     background-color: white;
+    cursor: pointer;
     border: none;
 }
 
@@ -154,4 +155,8 @@ input[type='submit'] {
 input[type='submit']:hover {
     background-color: #000000; 
     color: white;
+}
+
+a {
+     text-decoration: none;
 }
