--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -19,3 +19,12 @@ body >div {
     text-decoration:underline;
 }
 
+#imagenVista3 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    /* Agrega cualquier otro estilo necesario aquí */
+}
+
+
+
