--- a/src/css/new_style.css
+++ b/src/css/new_style.css
@@ -140,7 +140,20 @@ form  {
     text-align: center;
 }
 
+table {
+    width: 70%;
+    background-color: #e3eaed; 
+    border-radius: 10px;
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    font-size: 1.2rem;
+    line-height: 50px; 
+}
 
+td  button{
+    width: 70%;
+    font-size: 1rem;
+}
 
 /* Pagina iniciar sesion usuario */
 
