--- a/src/css/new_style.css
+++ b/src/css/new_style.css
@@ -95,14 +95,14 @@ main {
 }
 
 /* Estilos para la sección de imágenes */
-#contenedor-imagen {
+.contenedor-imagen {
     width: 18%;
     height: 63%;
     margin: 20px auto;
 }
 
 /* Estilos específicos para la página de login */
-#login-page > .div-superior > #contenedor-imagen {
+.login-page > .div-superior > .contenedor-imagen {
     width: 150px;
     height: 150px;
 }
@@ -121,15 +121,15 @@ img {
 }
 
 /* Estilos específicos para la página de registro de usuario */
-#register-page > .div-superior, #login-page > .div-superior {
+#register-page > .div-superior, .login-page > .div-superior {
     height: 25%;
 }
 
-#register-page > .div-inferior, #login-page > .div-inferior {
+#register-page > .div-inferior, .login-page > .div-inferior {
     height: 75%;
 }
 
-#register-page > .div-superior, #register-page > .div-inferior, #login-page > .div-superior, #login-page > .div-inferior {
+#register-page > .div-superior, #register-page > .div-inferior, .login-page > .div-superior, .login-page > .div-inferior {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -137,7 +137,7 @@ img {
 
 /* Estilos para encabezados h1 */
 h1  {
-   background-color: white;
+    background-color: white;
     padding: 20px;
     text-align: center;
 }
@@ -328,7 +328,7 @@ input[type='file'] {
         width: 20%;
         height: 50px;
     }
-    #contenedor-imagen {
+    .contenedor-imagen {
         width: 10%;
         height: 13%;
         margin: 20px auto;
