--- a/src/css/old.css
+++ b/src/css/old.css
@@ -6,7 +6,7 @@ body {
 
 /* Pagina del login */
 
-#login-page {
+.login-page {
     width: 100%;
     height: 100vh;
     overflow: hidden;
@@ -25,7 +25,7 @@ body {
     position: relative; 
 }
 
-#contenedor-imagen {
+.contenedor-imagen {
     width: 15%;
     height: auto;
     margin: 30px auto;
@@ -38,7 +38,7 @@ img {
     border-radius: 100px;
 }
 
-#login-page input[type="text"] {
+.login-page input[type="text"] {
     display: block;
     width: 60%;
     height: 100px;
