--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,7 +7,7 @@ body {
 /* Pagina del login */
 
 /* Implementado */
-#login-page {
+.login-page {
     width: 100%;
     height: 100vh;
     overflow: hidden;
@@ -24,7 +24,7 @@ body {
     position: relative; 
 }
 /* Implementado */
-#contenedor-imagen {
+.contenedor-imagen {
     width: 15%;
     height: auto;
     margin: 30px auto;
@@ -37,7 +37,7 @@ img {
     border-radius: 100px;
 }
 
-#login-page input[type="text"] {
+.login-page input[type="text"] {
     display: block;
     width: 60%;
     height: 100px;
