--- a/src/css/style_guille_client.css
+++ b/src/css/style_guille_client.css
@@ -32,3 +32,19 @@ button {
     width: 100px;
     height: 100px;
 }
+
+/* Make styles for select */
+
+select {
+    position: relative;
+    display: inline-block;
+    width: 300px;
+    height: 50px;
+    background-color: white;
+    border-radius: 20px;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    font-size: 22px;
+    padding: 0 20px;
+}
