--- a/test/logicaJuego/style.css
+++ b/test/logicaJuego/style.css
@@ -5,7 +5,7 @@
 }
 
 body::before {
-  background-image: url('https://img.itch.zone/aW1nLzEzODc4MDkzLmdpZg==/original/q%2BT3RV.gif');
+  background-image: url('ezgif.com-gif-maker.gif');
   content: '';
   position: absolute;
   width: 100%;
@@ -19,32 +19,12 @@ body::before {
   height: 100vh;
   display: flex;
   flex-direction: column;
+  position: relative;
 }
-
-.div-superior,
-.div-inferior {
-  flex: 1;
-}
-
-
-
-/* .div-superior {
-  background-image: url("Designer\(1\).png");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center
-}
-
-.div-inferior {
-  background-image: url("sand.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-}  */
 
 img {
-  width: 50px;
-  height: 50px;
+  width: 80px;
+  height: 80px;
   position: absolute; 
   left: 50%; 
   transform: translateX(-50%);
@@ -57,28 +37,27 @@ img {
 
 .contenedor {
   position: absolute;
-  width: 45px;
-  height: 45px;
+  width: 35px;
+  height: 35px;
 
 }
 
 #contenedor-superior-izquierda {
-  top: 50%;
-  left: 0;
+  top: 5%;
+  left: 10%;
 }
 
 #contenedor-superior-derecha {
-  left: 97.5902% !important;
-}
-
-#contenedor-inferior-derecha {
-  bottom: 0px !important; 
-  left: 97.4802% !important;
+  top: 5%;
+  left: 90%;
 }
 
 #contenedor-inferior-izquierda {
-  bottom: 0;
-  left: 0;
+  bottom: 50%;
+  left: 10%;
 }
 
-
+#contenedor-inferior-derecha {
+  bottom: 50%;
+  left: 90%;
+}
